--- a/react-diary/src/pages/Layout/index.css
+++ b/react-diary/src/pages/Layout/index.css
@@ -130,3 +130,7 @@
 .user-name {
     margin-right: 10px;
 }
+
+.ant-btn .css-dev-only-do-not-override-qnu6hi .ant-btn-default .ant-btn-sm {
+    width: 30px;
+}
